# learning-programming-app

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.toml  learning_app.db  setup-hooks.bat  setup-hooks.sh
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
doc/: README.md  er-diagram.md  sequence-diagram.md  workflow-diagram.md
example-go/section1-basics/: problem01_variables.go  problem03_data_types.go  problem04_zero_values.go  problem05_type_inference.go  problem07_string_operations.go  problem09_type_conversion.go  problem10_variable_scope.go
example-go/section10-collections/: problem03_maps.go  problem04_arrays.go  problem06_maps.go  problem07_arrays.go  problem09_maps.go
example-go/section2-control-flow/: problem01_if_statements.go  problem03_for_loops_basic.go  problem04_range_loops.go  problem05_switch_basic.go  problem06_switch_without_expression.go  problem07_switch_fallthrough.go  problem10_control_flow_patterns.go
example-go/section3-functions/: problem02_multiple_returns.go  problem05_closures.go  problem09_function_parameters.go  problem10_function_best_practices.go
example-go/section4-packages/: problem02_import_statements.go  problem03_standard_library.go  problem04_package_declaration.go  problem05_import_statements.go  problem06_standard_library.go  problem07_package_declaration.go  problem08_import_statements.go  (+2 more)
src/: lib.rs  main.rs
src/cli/: commands.rs  (+3 more)
tests/: auto_executor_test.rs  cli_tests.rs  e2e_tests.rs  file_watcher_integration_test.rs  go_handler_test.rs  go_problems_validation_test.rs  handlers_test.rs
(+110 files in other folders)
