[package]
name = "learning-programming-app"
version = "0.1.0"
edition = "2021"
authors = ["Learning Programming App Team"]
description = "A file-watching automatic code execution CLI for programming learning"
license = "MIT"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
futures = "0.3"
