[package]
name = "learning-programming"
version = "0.1.0"
edition = "2024"


[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
ctrlc = "3.5.0"
notify = "8.2.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tokio = { version = "1", features = ["full"] }
which = "8.0.0"
env_logger = "0.11.8"

[dev-dependencies]
tempfile = "3.23.0"
