[package]
name = "learning-programming"
version = "0.1.0"
edition = "2024"


[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
ctrlc = "3.5.2"
notify = "8.2.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tokio = { version = "1", features = ["full"] }
which = "8.0.2"
log = "0.4.29"
env_logger = "0.11.10"

[dev-dependencies]
tempfile = "3.27.0"
